# Get-Me-That-String

./: .gitignore  README.md  Speed Test Discussion.ipynb  client.py  concurrency_test_data.csv  config.py  conftest.py  install_server  logging_setup.py  pyproject.toml  report_generator.py  requirements.txt  server.py  speed_test.py  speed_test_data_reread_false.csv  speed_test_data_reread_true.csv  start.sh  stop.sh  test_data_10000.txt  test_data_100000.txt  uninstall_server
.ipynb_checkpoints/: concurrency_test_data-checkpoint.csv
core/: client.py  config.py  logger.py  report_generator.py  server.py  speed_test.py  utils.py
core/algorithms/: __init__.py  aho_corasick_search.py  base.py  boyer_moore_search.py  linear_search.py  mmap_search.py  multiprocessing_search.py  rabin_karp_search.py  regex_search.py  set_search.py
tests/: test_algorithms.py  test_client.py  test_config.py  test_logger.py  test_server.py  utils.py
